test to check percent support library

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -543,7 +543,16 @@
         <activity
             android:name="miscellaneous.list.activities.TestPercentOneActivity"
             android:label="@string/title_activity_test_percent_one"
-            android:theme="@style/MyDialog_AppTheme"
+            android:parentActivityName="miscellaneous.list.activities.MiscellaneousListActivity"
+            android:theme="@style/MyDialog_AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="miscellaneous.list.activities.MiscellaneousListActivity" />
+        </activity>
+        <activity
+            android:name="miscellaneous.list.activities.PercentTwoActivity"
+            android:label="@string/title_activity_percent_two"
+            android:theme="@style/AlertDialog.AppCompat"
             android:parentActivityName="miscellaneous.list.activities.MiscellaneousListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
