--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile('com.android.support:appcompat-v7:23.1.1') {
         exclude group: 'com.android.support', module: 'support-v4'
     }
+    compile files('libs/gizmorph.jar')
+
     compile 'com.android.support:support-annotations:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.code.gson:gson:2.5'
@@ -49,7 +51,11 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:percent:23.1.0'
+    compile 'com.commit451:PhotoView:1.2.4'
+    compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.4.1'
+    compile 'com.android.support:support-v4:23.1.1'
 }
+
 
 
 
