--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -552,11 +552,43 @@
         <activity
             android:name="miscellaneous.list.activities.PercentTwoActivity"
             android:label="@string/title_activity_percent_two"
-            android:theme="@style/AlertDialog.AppCompat"
+            android:parentActivityName="miscellaneous.list.activities.MiscellaneousListActivity"
+            android:theme="@style/AlertDialog.AppCompat">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="miscellaneous.list.activities.MiscellaneousListActivity" />
+        </activity>
+        <activity
+            android:name="miscellaneous.list.activities.ShowImageActivity"
+            android:label="@string/title_activity_show_image"
             android:parentActivityName="miscellaneous.list.activities.MiscellaneousListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="miscellaneous.list.activities.MiscellaneousListActivity" />
+        </activity>
+        <activity
+            android:name="miscellaneous.list.activities.ShowImageTwoActivity"
+            android:label="@string/title_activity_show_image_two"
+            android:parentActivityName="miscellaneous.list.activities.MiscellaneousListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="miscellaneous.list.activities.MiscellaneousListActivity" />
+        </activity>
+        <activity
+            android:name="viewpager.list.activities.ViewPagerListActivity"
+            android:label="@string/title_activity_view_pager_list"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.nimgade.pk.mytutorialapplication.MainActivity" />
+        </activity>
+        <activity
+            android:name="viewpager.list.activities.ViewPagerTestOneActivity"
+            android:label="@string/title_activity_view_pager_test_one"
+            android:parentActivityName="viewpager.list.activities.ViewPagerListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="viewpager.list.activities.ViewPagerListActivity" />
         </activity>
     </application>
 
