--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-v4'
     }
     compile files('libs/gizmorph.jar')
-
     compile 'com.android.support:support-annotations:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.code.gson:gson:2.5'
@@ -54,7 +53,13 @@ dependencies {
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.4.1'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:gridlayout-v7:23.2.1'
 }
+
+
+
 
 
 
