a spinner example where the underlying data is downloaded from network, this activity uses, OkHttp, GSON and Apache Common IO

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -638,6 +638,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="spinner.list.activities.SpinnerListActivity" />
         </activity>
+        <activity
+            android:name="spinner.list.activities.SpinnerLoadFromNetworkActivity"
+            android:label="@string/title_activity_spinner_load_from_network"
+            android:parentActivityName="spinner.list.activities.SpinnerListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="spinner.list.activities.SpinnerListActivity" />
+        </activity>
     </application>
 
 </manifest>
