--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -646,6 +646,19 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="spinner.list.activities.SpinnerListActivity" />
         </activity>
+        <activity
+            android:name="services.list.activity.ServiceThreeActivity"
+            android:label="@string/title_activity_service_three"
+            android:parentActivityName="services.list.activity.ServicesListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="services.list.activity.ServicesListActivity" />
+        </activity>
+
+        <service
+            android:name="services.list.activity.ServiceThreeActivity$ExampleService"
+            android:exported="false"
+            />
     </application>
 
 </manifest>
