--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -702,12 +702,20 @@
                 android:value="com.nimgade.pk.mytutorialapplication.MainActivity" />
         </activity>
         <activity
-            android:name="data.binding.list.activities.DataBindingTestOneActivity"
+            android:name="data.binding.list.activities.one.DataBindingTestOneActivity"
             android:label="@string/title_activity_data_binding_test_one"
             android:parentActivityName="data.binding.list.activities.DataBindingListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="data.binding.list.activities.DataBindingListActivity" />
+        </activity>
+        <activity
+            android:name="listview.test.activities.ListViewTestSevenActivity"
+            android:label="@string/title_activity_list_view_test_seven"
+            android:parentActivityName="listview.test.activities.ListViewListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="listview.test.activities.ListViewListActivity" />
         </activity>
     </application>
 
