--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         applicationId "com.nimgade.pk.mytutorialapplication"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
@@ -38,12 +38,11 @@ android {
 
 dependencies {
     provided fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile('com.android.support:appcompat-v7:23.1.1') {
+    compile('com.android.support:appcompat-v7:26.+') {
         exclude group: 'com.android.support', module: 'support-v4'
     }
     compile files('libs/gizmorph.jar')
-    compile 'com.android.support:design:23.1.1'
+
     compile 'com.google.code.gson:gson:2.5'
     compile 'org.apache.httpcomponents:httpcomponents-core:4.4.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -53,15 +52,18 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.android.support:multidex:1.0.0'
-    compile 'com.android.support:percent:23.1.0'
+    compile 'com.android.support:percent:26.+'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.4.1'
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:gridlayout-v7:23.1.1'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+    compile 'com.android.support:design:26.0.0-alpha1'
+    testCompile 'junit:junit:4.12'
 }
+
+
 
 
 
